--- a/package.json
+++ b/package.json
@@ -20,30 +20,32 @@
     "@react-native-voice/voice": "^3.2.4",
     "@react-navigation/native": "^6.0.2",
     "axios": "^1.7.2",
-    "expo": "~51.0.10",
+    "dialogflow": "^1.2.0",
+    "expo": "~51.0.14",
     "expo-constants": "~16.0.2",
-    "expo-dev-client": "~4.0.15",
+    "expo-dev-client": "~4.0.18",
     "expo-font": "~12.0.7",
     "expo-image": "~1.12.12",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.15",
-    "expo-splash-screen": "~0.27.4",
+    "expo-router": "~3.5.16",
+    "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.5",
+    "expo-system-ui": "~3.0.6",
+    "expo-updates": "~0.25.17",
     "expo-web-browser": "~13.0.3",
     "nativewind": "^2.0.11",
     "pdf2json": "^3.1.3",
     "pdfjs": "^2.5.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.1",
-    "react-native-dialogflow": "^3.2.2",
+    "react-native": "0.74.2",
+    "react-native-blob-util": "^0.19.9",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-pdf": "^6.7.5",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-tts": "^4.1.1",
-    "react-native-voice": "^0.3.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
