--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
   "dependencies": {
     "@expo-google-fonts/manrope": "^0.2.3",
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-voice/voice": "^3.2.4",
     "@react-navigation/native": "^6.0.2",
-    "axios": "^1.7.2",
-    "dialogflow": "^1.2.0",
+    "axios": "^1.7.3",
     "expo": "~51.0.14",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.18",
@@ -28,13 +28,14 @@
     "expo-image": "~1.12.12",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.16",
+    "expo-speech": "^12.0.2",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.6",
     "expo-updates": "~0.25.17",
     "expo-web-browser": "~13.0.3",
     "nativewind": "^2.0.11",
-    "pdf2json": "^3.1.3",
+    "pdf2json": "^3.1.4",
     "pdfjs": "^2.5.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
