--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@expo-google-fonts/manrope": "^0.2.3",
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-vector-icons/fontawesome5": "^5.15.4-alpha.28",
     "@react-native-voice/voice": "^3.2.4",
     "@react-navigation/native": "^6.0.2",
     "axios": "^1.7.3",
     "expo": "~51.0.14",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.18",
+    "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.7",
     "expo-image": "~1.12.12",
     "expo-linking": "~6.3.1",
@@ -47,8 +49,7 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-tts": "^4.1.1",
-    "react-native-web": "~0.19.10",
-    "expo-file-system": "~17.0.1"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
